<resources>
    <string name="app_name">Task</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_task_lists">TaskListsActivity</string>
    <string name="cliend_api_key">687414948259-7kkuaj2rithff8pq9o2j9rk3eg7rsmsu.apps.googleusercontent.com</string>
    <string name="task_lists">Task Lists</string>
    <string name="account">Account</string>
    <string name="add_tasklist">Add tasklist</string>
    <string name="refresh">Refresh</string>
    <string name="runtime_alert_dialog_message">Your account don\'t have permission to use this application. Use other account or check your internet connection.</string>
    <string name="runtime_alert_dialog_title">You have no permission or no internet connection.</string>
    <string name="title_activity_add_task_list">AddTaskListActivity</string>
    <string name="add_task_list">Add Task List</string>
    <string name="title">Title</string>
    <string name="your_title">Your title</string>
    <string name="add">Add</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="add_task">Add task</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="your_notes">Your notes</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick date</string>
    <string name="adding">Adding...</string>
    <string name="title_activity_today">TodayActivity</string>
    <string name="today">Today</string>
</resources>