<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".activity.AddTaskActivity"
    tools:deviceIds="wear">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/add_task" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45sp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="60sp"
            android:layout_marginHorizontal="30sp"
            android:inputType="text"
            android:hint="@string/your_title"
            android:textSize="15sp"
            android:autofillHints="none"
            android:id="@+id/task_title_edittext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130sp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/notes" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="155sp"
            android:layout_marginHorizontal="30sp"
            android:inputType="text"
            android:hint="@string/your_notes"
            android:textSize="15sp"
            android:autofillHints="none"
            android:id="@+id/task_notes_edittext"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210sp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="235sp"
            android:layout_marginBottom="20sp"
            android:text="@string/pick_date"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:id="@+id/date_picker"/>

        <Button
            android:layout_width="100sp"
            android:layout_height="60sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280sp"
            android:layout_marginBottom="20sp"
            android:text="@string/add"
            android:id="@+id/add_task_button"/>

    </RelativeLayout>

</ScrollView>