<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".activity.AddTaskListActivity"
    tools:deviceIds="wear">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/add_task_list" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="60sp"
        android:layout_marginHorizontal="30sp"
        android:inputType="text"
        android:hint="@string/your_title"
        android:textSize="15sp"
        android:autofillHints="none"
        android:id="@+id/tasklist_title_edittext"/>

    <Button
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130sp"
        android:text="@string/add"
        android:id="@+id/add_tasklist_button"/>

</RelativeLayout>